--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1C6lQJ8t0RIMuYvm9jYP6dyaVtYI-4sAb/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
