--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Ebin Benny</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="hhttps://www.linkedin.com/in/ebin-benny-477901228/"> Ebin Benny</a></h1>
 
 </section>
 <!-- footer section ends -->
