--- a/index.html
+++ b/index.html
@@ -314,7 +314,17 @@ s0.parentNode.insertBefore(s1,s0);
 
   <div class="timeline">
 
-
+<div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>SKRYFON Pvt Ltd</h2>
+        </div>
+        <div class="desc">
+            <h3>Software developer traniee </h3>
+            <p>Present</p>
+        </div>
+      </div>
+    </div>
 
     <div class="container left">
       <div class="content">
