--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ s0.parentNode.insertBefore(s1,s0);
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1C6lQJ8t0RIMuYvm9jYP6dyaVtYI-4sAb/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1HrnLCBh0rZPtHDGTAcZcVFBvLLUeVbI2/view" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
