--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ s0.parentNode.insertBefore(s1,s0);
 </div>
 
 <div class="viewall">
-  <a href="/projects/index.html" class="btn"><span>View All</span>
+  <a href="../portfolio/projects/index.html" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
 </a>
 </div>
