--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ s0.parentNode.insertBefore(s1,s0);
   </div>
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
+    <a href="/portfolio/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
     </a>
   </div>
