--- a/experience/index.html
+++ b/experience/index.html
@@ -117,7 +117,7 @@
   </div>
 
   <div class="morebtn">
-    <a href="/#experience" class="btn">
+    <a href="/portfolio/#experience" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
