--- a/index.html
+++ b/index.html
@@ -229,7 +229,19 @@ s0.parentNode.insertBefore(s1,s0);
 
 <!-- phpMyAdmin (no direct icon, using database icon as placeholder) -->
 
+<div class="bar">
+  <div class="info">
+    <img src="https://img.icons8.com/color/48/laravel.png" />
+    <span>laravel</span>
+  </div>
+</div>
 
+<div class="bar">
+  <div class="info">
+    <img src="https://img.icons8.com/?size=100&id=EPbEfEa7o8CB&format=png&color=000000" />
+    <span>Postman</span>
+  </div>
+</div>
 
       </div>
 </div>
