--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@ s0.parentNode.insertBefore(s1,s0);
 
 <div class="bar">
   <div class="info">
-    <img src="https://img.icons8.com/color/48/laravel.png" />
+    <img src="https://img.icons8.com/fluency/48/laravel.png" />
     <span>laravel</span>
   </div>
 </div>
 
 <div class="bar">
   <div class="info">
-    <img src="https://img.icons8.com/?size=100&id=EPbEfEa7o8CB&format=png&color=000000" />
-    <span>Postman</span>
+    <img src="https://img.icons8.com/?size=100&id=121602&format=png&color=000000" />
+    <span>VScode</span>
   </div>
 </div>
 
